--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
     </properties>
 
 <dependencies>
+
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-dbcp2</artifactId>
+        <version>2.5.0</version>
+    </dependency>
     <dependency>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
